added addTransaction method to TransactionService